cmake_minimum_required(VERSION 3.16)
project(My_pass)
set(LLVM_ROOT "" CACHE PATH "/usr/lib/llvm-10")
if(NOT EXISTS ${LLVM_ROOT}/include/llvm)
    message(FATAL_ERROR "LLVM_ROOT (${LLVM_ROOT}) is invalid")
endif()
list(APPEND CMAKE_PREFIX_PATH "${LLVM_ROOT}/share/llvm/cmake")
find_package(LLVM REQUIRED 10.0.0)
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
include(HandleLLVMOptions)
include(AddLLVM)

add_definitions(${LLVM_DEFINITIONS})
link_directories(${LLVM_LIBRARY_DIRS})
include_directories(${LLVM_INCLUDE_DIRS})

set(LLVM_RUNTIME_OUTPUT_INTDIR "${PROJECT_BINARY_DIR}/bin")
set(LLVM_LIBRARY_OUTPUT_INTDIR "${PROJECT_BINARY_DIR}/lib")

add_subdirectory(Function_Pass)